# whippet

./: .gitignore  README.md  pyproject.toml
.whippet_logs/: gemma-cs-finetome-sft-1e-baseline-merged_Q4_K_M_20250425-095531.json  gemma-cs-finetome-sft-1e-baseline-merged_Q4_K_M_20250425-100608.json  gemma-cs-finetome-sft-1e-baseline-merged_Q4_K_M_20250425-100901.json  gemma-cs-finetome-sft-1e-baseline-merged_Q4_K_M_20250425-100949.json
src/whippet/: cli.py  compare.py  logger.py  metrics.py  model_info.py  printer.py  profiler.py
src/whippet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
whippet.egg-info/: requires.txt
