[project]
name = "whippet"
version = "0.1.0"
description = "Quantization toolkit for optimizing small LLMs for deployment"
authors = [{ name = "Antone King", email = "toneking972@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.7",
    "numpy",
    "onnx",
    "onnxruntime",
    "tqdm",
    "rich",
]

[project.scripts]
whippet = "whippet.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]
gpu = ["triton"]

[tool.setuptools.package-data]
"whippet" = ["README.md", "LICENSE"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["whippet"]
